--- a/css/header.css
+++ b/css/header.css
@@ -3,6 +3,7 @@
     color: #a5adb8;
     text-decoration: none;
     display: block;
+    
 }
 
 .header__logo-desc{
@@ -22,7 +23,7 @@
     border: 1px solid #875f66;
     float: left;
     height: 34px;
-    padding: 0 10px;
+    padding: 0 14px;
     color: #5b636e;
     background-color: #2d363b;
 }
@@ -47,14 +48,13 @@
     margin-left: 10px;
     width: 36px;
     height: 34px;
-    column-rule: #fff;
+    color: #fff;
 }
 .header .container {
-    padding: 0 8px;
-    padding: 20px 8px 15px;
+    padding: 14px 8px 10px;
+    
 }
 .header {
-    background: rgb(43,48,52);
     background: linear-gradient(0deg, rgba(43,48,52,1) 0%, rgba(53,58,70,1) 100%);
 }
 .clearfix::after{
