--- a/css/footer.css
+++ b/css/footer.css
@@ -1,35 +1,34 @@
 .footer{
-    background-color: #2b2a36 ;
-    
+    background-color: #252b33 ;
+    border-bottom: 1px solid #252b33;
     border-top: 8px solid #ae4b5d;
     
 }
-.footer .container {
-    padding: 5px 0px 40px;
-    
-}
+
 .footer .col3 {
     padding: 0px 10px;
+    overflow: hidden;
     
     
 }
-/* .col3 ul li:not(:nth-last-of-type(1))::after{
-    padding: 0;
-    list-style: none;
-}
- */
 
- .footer__text ul{
+.footer__text {
+    padding: 0;
+}
+.footer__text ul{
     padding: 0;
     
 
  }
 .footer h4{
+    margin: 0;
+  
     color: #a5adb8;
     font-size: 1.125rem;
     border-bottom:1px solid #40474f; 
     position:relative;
-    z-index:1
+    z-index:1;
+    padding: 28px 0 6px;
 
    
 }
@@ -42,6 +41,9 @@
     right: 0px;
     bottom: 0px;
     border-bottom: 1px solid #191c20;
+}
+.footer p{
+    padding: 10px 0px 0px;
 }
 footer .col .col3{
     margin: 0 0 5px;
@@ -58,7 +60,13 @@ h4 span{
 }
 .fa-solid , .fa-clock {
     color: #9c4757;
+    font-size: 1rem;
+    margin-right: 5px;
+    
 
+}
+.cherry-hours ul{
+    padding-left: 5px;
 }
 .cherry-hours li{
     list-style: none
@@ -69,15 +77,35 @@ h4 span{
 
 }
 
-.local-cherry li:before{
+.local-cherry li::before{
     content: "•";
     margin-right: 5px;
     color: #9c4757;
-    font-size: 10px;
+    font-size: 14px;
+    font-weight: 900;
+}
+
+.local-cherry h5 {
+    border-bottom: 0;
+    font-size: 0.875rem;
+    font-style: bold;
+    color: #a5adb8;
 
 }
 
+
+
 .la-location ul{   
     list-style: none;
+}
+.la-location li{
+    margin: 5px 0;
+}
+
+#local-cherry{
+    padding-left: 32px;
+}
+#la-location {
+    padding-left: 50px;
 }
 
