--- a/css/index.css
+++ b/css/index.css
@@ -23,7 +23,10 @@ body , html {
     font-size: 16px;
     margin: 0;
     font-family: "Arial";
+    
+    
 }
+
 main{
     padding-top: 17px;
 }
@@ -230,17 +233,46 @@ article a{
     margin: 15px 0px 12px;
 }
 .unordered-list{
-    padding-left: 25px;
+    padding-left: 9px;
+    list-style: none;
 }
 .unordered-list ul {
     padding-left: 17px;
+    
+    
 }
+.unordered-list li:before{
+    content: "•"; 
+    font-weight: 800;
+    margin-right: 0.5em ;
+}
+.unordered-list-sub li {
+    list-style-type: none; 
+   }
+.unordered-list-sub li::before {
+    content: "•"; 
+    font-weight: 800;
+    margin-right: 0.5em ;
+    
+}
+   
+
+.unstyled-list-sub li {
+    list-style-type: none; 
+   }
+.unstyled-list-sub li::before {
+    content: "•"; 
+    font-weight: 800;
+    margin-right: 0.5em ;
+    
+}
+
 .unstyled-list {
     list-style: none;
     padding: 0px 10px;
 }
 .unstyled-list ul {
-    padding-left: 25px;
+    padding-left: 10px;
 }
 .ordered{
     padding-left: 18px;
@@ -251,13 +283,16 @@ article a{
     font-size: 0.875rem ;
 }
 
+.section2{
+    margin-bottom: 43px;
+}
 /* col */
 
 .col{
     max-height: 215px;
     display: inline-block;
     width: 100%;
-    margin-bottom: 43px;
+    
 }
 .col3{
     float: left;
@@ -303,9 +338,7 @@ h5 span {
     overflow: hidden;
     margin-top: 17px;
 }
-.th{
-    padding: 8px 10px;
-}
+
 .table__head{
     text-align: center;
 
@@ -316,9 +349,7 @@ thead{
     color: #fff ;
     font-size: 0.875rem ;
 }
-thead tr {
-    text-align: center;
-}
+
 th , td{
     border: 1px solid #d8dbde;
     padding: 9px 0
@@ -327,9 +358,7 @@ th , td{
 tr a{
     color: #d08b98;
 }
-tr {
-    text-align: left;
-}
+
 tbody{
     width: 100%;
     background-color: #282d33;
@@ -338,6 +367,11 @@ tbody{
     
 }
 tbody tr , tbody td {
-    padding: 9px 15px ;
+    padding: 9px 15px;
 }
 
+
+tr td:nth-child(1) {
+    
+    text-align: center;
+}
