--- a/css/footer.css
+++ b/css/footer.css
@@ -62,6 +62,9 @@ h4 span{
     color: #9c4757;
     font-size: 1rem;
     margin-right: 5px;
+    position: relative;
+    top: 1px;
+    padding: 1px 0;
     
 
 }
@@ -69,8 +72,14 @@ h4 span{
     padding-left: 5px;
 }
 .cherry-hours li{
-    list-style: none
+    list-style: none;
 }
+
+.cherry-hours .col3 li{
+    padding: 2px 0 4px;
+    
+}
+
 
 .local-cherry li{
     list-style: none
