--- a/css/index.css
+++ b/css/index.css
@@ -23,13 +23,15 @@ body , html {
     font-size: 16px;
     margin: 0;
     font-family: "Arial";
+    background-color: #e5e2e3;
     
     
 }
-
-main{
+main .container {
+    background-color: #fff;
     padding-top: 17px;
 }
+
 .container{
     max-width: 982px;
     margin: 0 auto;
@@ -90,6 +92,9 @@ main{
 .nav .container{
     text-align: right;
     background-color: #95161f;
+    line-height: 0;
+
+
 }
 .breadcrumbs{
     background-color: #f3f3f3;
@@ -196,6 +201,7 @@ aside button {
     width: 100%;
     font-size: 1rem ;
 }
+
 .button__wrapper{
     text-align: center;
     margin-bottom: 33px;
@@ -217,7 +223,8 @@ aside button {
 .article__desc{
     font-size: 0.875rem ;
     color: #5c646e;
-    margin: 10px 0;
+    margin: 8px 0 0;
+    line-height: 1.25rem;
 }
 article a{
     color: #95161f;
@@ -235,6 +242,7 @@ article a{
 .unordered-list{
     padding-left: 9px;
     list-style: none;
+    margin: 0;
 }
 .unordered-list ul {
     padding-left: 17px;
@@ -270,12 +278,14 @@ article a{
 .unstyled-list {
     list-style: none;
     padding: 0px 10px;
+    margin: 0;
 }
 .unstyled-list ul {
     padding-left: 10px;
 }
 .ordered{
     padding-left: 18px;
+    margin: 0;
 }
 .ordered li{
     list-style-type: decimal;
@@ -306,10 +316,13 @@ article a{
     overflow: hidden;
     
 }
-.col3 li{
+.footer .col3 li{
     padding: 2px 0px;
 }
-
+article .col3 li{
+    line-height: 1.5rem;
+    padding: 0;
+}
 
 h5 {
     margin: 0;
