--- a/css/footer.css
+++ b/css/footer.css
@@ -58,6 +58,10 @@ h4 span{
 .footer a{
     color: #d08b98;
 }
+.footer a:hover{
+    color: #40474f;
+
+}
 .fa-solid , .fa-clock {
     color: #9c4757;
     font-size: 1rem;
