--- a/css/header.css
+++ b/css/header.css
@@ -27,6 +27,10 @@
     color: #5b636e;
     background-color: #2d363b;
 }
+.header__search input:hover{
+    border: 1px solid #fff;
+    cursor: pointer;
+}
 .header__search input::-webkit-input-placeholder { /* Chrome/Opera/Safari */
     color: #5b636e;
 }
@@ -52,6 +56,12 @@
     padding-left: 8px;
     padding-top: 6px;
 }
+.header__search button:hover{
+    border: 1px solid #fff;
+    
+
+}
+
 .header .container {
     padding: 14px 8px 10px;
     
